Fix tree traversals with pro parte syns